compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__common_op_wrong_value_sub.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 42
expression: "\n    type t : int\n    var k : int\n\n    % Type operand prevents checking of type compatibility\n    var _tt := t - t\n    var _tk := t - k\n    var _kt := k - t\n    "

---
"t"@(FileId(1), 10..11) [Resolved(Type)]: alias[DefId(LibraryId(0), LocalDefId(0))] of int
"k"@(FileId(1), 26..27) [Declared]: int
"_tt"@(FileId(1), 102..105) [Declared]: int
"_tk"@(FileId(1), 123..126) [Declared]: int
"_kt"@(FileId(1), 144..147) [Declared]: int
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 109..110: cannot use `t` as an expression
| error in file FileId(1) for 109..110: `t` is a reference to a type, not a variable
| note in file FileId(1) for 10..11: `t` declared here
error in file FileId(1) at 113..114: cannot use `t` as an expression
| error in file FileId(1) for 113..114: `t` is a reference to a type, not a variable
| note in file FileId(1) for 10..11: `t` declared here
error in file FileId(1) at 130..131: cannot use `t` as an expression
| error in file FileId(1) for 130..131: `t` is a reference to a type, not a variable
| note in file FileId(1) for 10..11: `t` declared here
error in file FileId(1) at 155..156: cannot use `t` as an expression
| error in file FileId(1) for 155..156: `t` is a reference to a type, not a variable
| note in file FileId(1) for 10..11: `t` declared here
