compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__common_op_wrong_value_xor.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 42
expression: "\n    type t : int\n    var k : int\n\n    % Type operand prevents checking of type compatibility\n    var _tt := t xor t\n    var _tk := t xor k\n    var _kt := k xor t\n    "

---
"t"@(FileId(1), 10..11) [Resolved(Type)]: alias[DefId(LibraryId(0), LocalDefId(0))] of int
"k"@(FileId(1), 26..27) [Declared]: int
"_tt"@(FileId(1), 102..105) [Declared]: nat
"_tk"@(FileId(1), 125..128) [Declared]: nat
"_kt"@(FileId(1), 148..151) [Declared]: nat
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 109..110: cannot use `t` as an expression
| error in file FileId(1) for 109..110: `t` is a reference to a type, not a variable
| note in file FileId(1) for 10..11: `t` declared here
error in file FileId(1) at 115..116: cannot use `t` as an expression
| error in file FileId(1) for 115..116: `t` is a reference to a type, not a variable
| note in file FileId(1) for 10..11: `t` declared here
error in file FileId(1) at 132..133: cannot use `t` as an expression
| error in file FileId(1) for 132..133: `t` is a reference to a type, not a variable
| note in file FileId(1) for 10..11: `t` declared here
error in file FileId(1) at 161..162: cannot use `t` as an expression
| error in file FileId(1) for 161..162: `t` is a reference to a type, not a variable
| note in file FileId(1) for 10..11: `t` declared here
